<resources>
    <string name="build_number">20080722-0001</string>
    <string name="meeting_invitation" />
    <string name="account_setup_failed_security_policies_required" />
    <string name="account_folder_list_summary_unread" />
    <string name="account_settings_add_account_label" />
    <string name="account_setup_basics_instructions" />
    <string name="account_setup_exchange_domain_hint" />
    <string name="account_setup_exchange_domain_label" />
    <string name="account_setup_options_mail_window_all" />
    <string name="accounts_context_menu_title" />
    <string name="accounts_title" />
    <string name="add_contact_dlg_message_fmt" />
    <string name="add_contact_dlg_title" />
    <string name="message_list_title" />
    <string name="status_loading_more_failed" />
    <string name="status_sending_messages_failed" />
    <string name="provider_note_yahoo" />
    <string name="provider_note_yahoo_uk" />
    <string name="read_attachment_label">Read Email attachments</string>
    <string name="read_attachment_desc">Allows this application to read your Email attachments.</string>
    <string name="permission_access_provider_label">Access Email provider data</string>
    <string name="permission_access_provider_desc">Allows this application to access your Email database, including received messages, sent messages, usernames and passwords.</string>
    <string name="app_name">Email</string>
    <string name="compose_title">Compose</string>
    <string name="debug_title">Debug</string>
    <string name="next_action">Next</string>
    <string name="okay_action">OK</string>
    <string name="cancel_action">Cancel</string>
    <string name="send_action">Send</string>
    <string name="reply_action">Reply</string>
    <string name="reply_all_action">Reply all</string>
    <string name="delete_action">Delete</string>
    <string name="forward_action">Forward</string>
    <string name="done_action">Done</string>
    <string name="discard_action">Discard</string>
    <string name="save_draft_action">Save as draft</string>
    <string name="read_unread_action">Read/Unread</string>
    <string name="read_action">Mark read</string>
    <string name="unread_action">Mark unread</string>
    <string name="favorite_action">Favorite</string>
    <string name="set_star_action">Add star</string>
    <string name="remove_star_action">Remove star</string>
    <string name="refresh_action">Refresh</string>
    <string name="add_account_action">Add account</string>
    <string name="deselect_all_action">Deselect all</string>
    <string name="compose_action">Compose</string>
    <string name="search_action">Search</string>
    <string name="open_action">Open</string>
    <string name="account_settings_action">Account settings</string>
    <string name="remove_account_action">Remove account</string>
    <string name="folders_action">Folders</string>
    <string name="accounts_action">Accounts</string>
    <string name="mark_as_read_action">Mark as read</string>
    <string name="mark_as_unread_action">Mark as unread</string>
    <string name="add_cc_bcc_action">Add Cc/Bcc</string>
    <string name="add_attachment_action">Add attachment</string>
    <string name="dump_settings_action">Dump settings</string>
    <string name="choose_attachment_dialog_title">Choose attachment</string>
    <string name="status_loading_more">Loading messages…</string>
    <string name="status_sending_messages">Sending messages…</string>
    <string name="status_network_error">Connection error</string>
    <string name="notification_new_title">New email</string>
    <string name="error_loading_message_body">Unexpected error while loading message text. Message may be too large to view.</string>
    <string name="mailbox_name_server_inbox">Inbox</string>
    <string name="mailbox_name_server_outbox">Outbox</string>
    <string name="mailbox_name_server_drafts">Drafts</string>
    <string name="mailbox_name_server_trash">Trash</string>
    <string name="mailbox_name_server_sent">Sent</string>
    <string name="mailbox_name_server_junk">Junk</string>
    <string name="mailbox_name_display_inbox">Inbox</string>
    <string name="mailbox_name_display_outbox">Outbox</string>
    <string name="mailbox_name_display_drafts">Drafts</string>
    <string name="mailbox_name_display_trash">Trash</string>
    <string name="mailbox_name_display_sent">Sent</string>
    <string name="mailbox_name_display_junk">Junk</string>
    <string name="debug_version_fmt">Version: %s</string>
    <string name="debug_enable_debug_logging_label">Enable extra debug logging?</string>
    <string name="debug_enable_sensitive_logging_label">Enable sensitive information debug logging? (May show passwords in logs.)</string>
    <string name="debug_enable_exchange_logging_label">Enable exchange parser logging? (Extremely verbose)</string>
    <string name="debug_enable_exchange_file_logging_label">Enable exchange sd card logging?</string>
    <string name="account_folder_list_separator_accounts">Accounts</string>
    <string name="account_folder_list_summary_inbox">Combined Inbox</string>
    <string name="account_folder_list_summary_starred">Starred</string>
    <string name="account_folder_list_summary_drafts">Drafts</string>
    <string name="account_folder_list_summary_outbox">Outbox</string>
    <string name="account_folder_list_refresh_toast">Please longpress an account to refresh it</string>
    <string name="mailbox_list_title">Mailbox</string>
    <string name="message_list_load_more_messages_action">Load more messages</string>
    <string name="message_list_send_pending_messages_action">Send outgoing messages</string>
    <string name="message_compose_to_hint">To</string>
    <string name="message_compose_cc_hint">Cc</string>
    <string name="message_compose_bcc_hint">Bcc</string>
    <string name="message_compose_subject_hint">Subject</string>
    <string name="message_compose_body_hint">Compose Mail</string>
    <string name="message_compose_fwd_header_fmt">\n\n-------- Original Message --------\nSubject: %1$s\nFrom: %2$s\nTo: %3$s\nCC: %4$s\n\n</string>
    <string name="message_compose_reply_header_fmt">\n\n%s wrote:\n\n</string>
    <string name="message_compose_quoted_text_label">Quoted text</string>
    <string name="message_compose_error_no_recipients">You must add at least one recipient.</string>
    <string name="message_compose_error_invalid_email">Some email addresses are invalid.</string>
    <string name="message_compose_attachments_skipped_toast">Some attachments cannot be forwarded because they have not downloaded.</string>
    <string name="message_compose_attachment_size">File too large to attach.</string>
    <string name="message_compose_display_name">%1$s and %2$d others</string>
    <string name="message_view_to_label">To:</string>
    <string name="message_view_cc_label">Cc:</string>
    <string name="message_view_attachment_view_action">Open</string>
    <string name="message_view_attachment_download_action">Save</string>
    <string name="message_view_status_attachment_saved">Attachment saved as %s.</string>
    <string name="message_view_status_attachment_not_saved">Unable to save attachment.</string>
    <string name="message_view_show_pictures_instructions">Select \"Show pictures\" to display embedded pictures.</string>
    <string name="message_view_show_pictures_action">Show pictures</string>
    <string name="message_view_fetching_attachment_toast">Fetching attachment.</string>
    <string name="message_view_fetching_attachment_progress">Fetching attachment %s</string>
    <string name="message_view_invite_view">View in Calendar »</string>
    <string name="message_view_invite_title">Calendar Invite</string>
    <string name="message_view_invite_text">Going?</string>
    <string name="message_view_invite_accept">\u0020Yes</string>
    <string name="message_view_invite_maybe">\u0020Maybe</string>
    <string name="message_view_invite_decline">\u0020No</string>
    <string name="message_view_invite_toast_yes">You have accepted this invitation</string>
    <string name="message_view_invite_toast_maybe">You have replied \"maybe\" to this invitation</string>
    <string name="message_view_invite_toast_no">You have declined this invitation</string>
    <string name="message_discarded_toast">Message discarded.</string>
    <string name="message_saved_toast">Message saved as draft.</string>
    <string name="message_view_display_attachment_toast">This attachment cannot be displayed.</string>
    <string name="account_setup_basics_title">Set up email</string>
    <string name="account_setup_basics_exchange_title">Add an Exchange account</string>
    <string name="account_setup_basics_exchange_title_alternate">Add an Exchange ActiveSync account</string>
    <string name="accounts_welcome">You can configure Email for most accounts in just a few steps.</string>
    <string name="accounts_welcome_exchange">You can configure an Exchange account in just a few steps.</string>
    <string name="accounts_welcome_exchange_alternate">You can configure an Exchange ActiveSync account in just a few steps.</string>
    <string name="account_setup_basics_email_hint">Email address</string>
    <string name="account_setup_basics_password_hint">Password</string>
    <string name="account_setup_basics_default_label">Send email from this account by default.</string>
    <string name="account_setup_basics_manual_setup_action">Manual setup</string>
    <string name="account_setup_username_password_toast">Please type a valid email address and password.</string>
    <string name="account_duplicate_dlg_title">Duplicate Account</string>
    <string name="account_duplicate_dlg_message_fmt">This login is already in use for the account \"%s\".</string>
    <string name="account_setup_check_settings_title" />
    <string name="account_setup_check_settings_retr_info_msg">Retrieving account information…</string>
    <string name="account_setup_check_settings_check_incoming_msg">Checking incoming server settings…</string>
    <string name="account_setup_check_settings_check_outgoing_msg">Checking outgoing server settings…</string>
    <string name="account_setup_check_settings_canceling_msg">Canceling…</string>
    <string name="account_setup_names_title">Set up email</string>
    <string name="account_settings_default_label">Default account</string>
    <string name="account_settings_default_summary">Send email from this account by default</string>
    <string name="account_settings_notify_label">Email notifications</string>
    <string name="account_settings_notify_summary">Notify in status bar when email arrives</string>
    <string name="account_settings_mail_check_frequency_label">Inbox check frequency</string>
    <string name="account_settings_incoming_label">Incoming settings</string>
    <string name="account_settings_outgoing_label">Outgoing settings</string>
    <string name="account_settings_description_label">Account name</string>
    <string name="account_settings_name_label">Your name</string>
    <string name="account_settings_signature_label">Signature</string>
    <string name="account_settings_notifications">Notification settings</string>
    <string name="account_settings_sync_contacts_enable">Sync contacts</string>
    <string name="account_settings_sync_contacts_summary">Also sync contacts from this account</string>
    <string name="account_settings_sync_calendar_enable">Sync calendar</string>
    <string name="account_settings_sync_calendar_summary">Also sync calendar from this account</string>
    <string name="account_settings_vibrate_when_label">Vibrate</string>
    <string name="account_settings_vibrate_when_summary">Also vibrate when email arrives</string>
    <string name="account_settings_vibrate_when_dlg_title">Vibrate</string>
    <string name="account_settings_ringtone">Select ringtone</string>
    <string name="account_settings_servers">Server settings</string>
</resources>