<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:key="account_settings">
        <EditTextPreference android:title="@string/account_settings_description_label" android:key="account_description" android:summary="" android:order="1" android:dialogTitle="@string/account_settings_description_label" />
        <EditTextPreference android:title="@string/account_settings_name_label" android:key="account_name" android:summary="" android:order="2" android:dialogTitle="@string/account_settings_name_label" />
        <EditTextPreference android:title="@string/account_settings_signature_label" android:key="account_signature" android:summary="" android:order="3" android:dialogTitle="@string/account_settings_signature_label" />
        <ListPreference android:entries="@array/account_settings_check_frequency_entries" android:title="@string/account_settings_mail_check_frequency_label" android:key="account_check_frequency" android:order="4" android:dialogTitle="@string/account_settings_mail_check_frequency_label" android:entryValues="@array/account_settings_check_frequency_values" />
        <CheckBoxPreference android:title="@string/account_settings_default_label" android:key="account_default" android:summary="@string/account_settings_default_summary" android:order="6" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/account_settings_notifications">
        <CheckBoxPreference android:title="@string/account_settings_notify_label" android:key="account_notify" android:summary="@string/account_settings_notify_summary" android:defaultValue="true" />
        <RingtonePreference android:layout="?android:preferenceLayoutChild" android:title="@string/account_settings_ringtone" android:key="account_ringtone" android:dependency="account_notify" android:defaultValue="content://settings/system/notification_sound" android:ringtoneType="notification" />
        <ListPreference android:entries="@array/account_settings_vibrate_when_entries" android:layout="?android:preferenceLayoutChild" android:title="@string/account_settings_vibrate_when_label" android:key="account_settings_vibrate_when" android:summary="@string/account_settings_vibrate_when_summary" android:dependency="account_notify" android:defaultValue="never" android:dialogTitle="@string/account_settings_vibrate_when_dlg_title" android:entryValues="@array/account_settings_vibrate_when_values" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/account_settings_servers" android:key="account_servers">
        <PreferenceScreen android:title="@string/account_settings_incoming_label" android:key="incoming" />
        <PreferenceScreen android:title="@string/account_settings_outgoing_label" android:key="outgoing" />
        <CheckBoxPreference android:layout="?android:preferenceLayoutChild" android:title="@string/account_settings_sync_contacts_enable" android:key="account_sync_contacts" android:summary="@string/account_settings_sync_contacts_summary" android:defaultValue="true" />
        <CheckBoxPreference android:layout="?android:preferenceLayoutChild" android:title="@string/account_settings_sync_calendar_enable" android:key="account_sync_calendar" android:summary="@string/account_settings_sync_calendar_summary" android:defaultValue="true" />
    </PreferenceCategory>
</PreferenceScreen>